# workspace-system

./: .dockerignore  .eslintignore  .gcloudignore  .git-hook-fix.txt  .gitattributes  .gitignore  .prettierignore  .ruffignore  AI_TEAM.md  ANALYSIS_REPORT.md  ANNOUNCE_WIKI.md  ARCHITECTURE_OVERVIEW.txt  CLEANUP_SUMMARY.md  COMMANDS.sh  COPILOT_CONTRIBUTIONS.md  GITHUB_WIKI_SETUP.md  INDEX.md  KIRO_PROFILE.md  KIRO_REVIEW_SUMMARY.md  MERGE_COMPLETE.md  Makefile  PROJECT_CONSOLIDATION_REPORT.md  PROJECT_REVIEW_SUMMARY.md  PR_MERGE_REQUEST.md  README.md  SETUP.md  STRUCTURE.md  TESTING.md  UNIFIED_SYSTEM.md  WIKI_HOME.md  WIKI_MANAGER_GUIDE.md  cleanup_report.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  run_tests.py  wiki_populate.py  ws
.github/: DEVELOPER_QUICK_REFERENCE.md  DISCUSSION_GUIDE.md  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md
docs/: ACTION_PLAN.md  AUTOMATION_COMPLETE.md  CLEANUP_TOOLS.md  DONT_REINVENT_WHEEL.md  DUPLICATION_ANALYSIS.md  EFFECTIVE_DEDUPLICATION.md  EVOLUTION_SUMMARY.md  EXECUTION_SUMMARY.md  EXTRACTION_WORKFLOW.md  GROWTH_REVIEW.md  HUMAN_AI_COLLABORATION.md  IGNORE_LOGIC.md  IMPROVEMENTS_COMPLETE.md  INTEGRATION_GUIDE.md  MISSION_COMPLETE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PATTERN_LIBRARY.md  PROJECT_ACTION_PLAN.md  PROJECT_REVIEW.md  PROPOSAL_SYSTEM_GUIDE.md  QUALITY_GATE_GUIDE.md  READY_TO_EXTRACT.md  REORGANIZATION_COMPLETE.md  REVIEW_AND_PATH_FORWARD.md  SESSION_SUMMARY.md  SYSTEM_OVERVIEW.md  SYSTEM_READINESS.md  TOOL_FEATURES_SUMMARY.md  TOOL_MANAGEMENT_GUIDE.md  TOOL_SYSTEM_COMPLETE.md  WIKI.md  WORKSPACE_VS_PROJECT.md
scripts/: activate.sh  clean-tracked-ignored.sh  diagnose-project.sh  extract_all.sh  fix-project.sh  git-safe-fix.sh  integrate_idea.sh  reorganize_folders.sh  setup_automation.sh  unified-fix.sh
src/: approve_suggestions.py  auto_integrate.py  automation_manager.py  backup_manager.py  collab_system.py  db_utils.py  dedup_checker.py  evolution_tracker.py  git_backup.py  health_monitor.py  human_ai_collaboration.py  idea_extractor.py  idea_extractor_v2.py  implement_strategy.py  improvement_analyzer.py  kb_manager.py  maintenance_system.py  optimization_analyzer.py  populate_system.py  prevention_system.py  project_manager.py  proposal_system.py  quality_gate.py  review_tools.py  schema.py  session_manager.py  smart_cleanup.py  smart_workflow.py  strategy_builder.py  task_automator.py  tool_cli.py  tool_helpers.py  (+4 more)
(+29 files in other folders)
